# rules_zig

./: .bazelrc  .bazelrc.common  .bazelrc.flags  .bazelrc.remote  .bazelversion  .gitignore  .pre-commit-config.yaml  .prettierignore  BUILD.bazel  CONTRIBUTING.md  LICENSE  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bzlmod  bazel_versions.bzl  internal_deps.bzl  renovate.json  workspace_status.sh
docs/: BUILD.bazel  extensions.md  repositories.md  rules.md  toolchains.md
docs/private/: BUILD.bazel  resolved_target_toolchain.md  resolved_toolchain.md  settings.md
e2e/workspace/: .bazelignore  .bazelrc  .bazelversion  BUILD  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  WORKSPACE.bzlmod  repro.sh  workspace_status.sh  zig_version.expected
e2e/workspace/bazel_builtin/: BUILD.bazel  module.zig  package.zig  test.zig
e2e/workspace/c-sources/: BUILD.bazel  main.zig  symbol.c
e2e/workspace/canonical-name-module/: BUILD.bazel  main.zig
e2e/workspace/configure-mode/: BUILD.bazel  binary.zig  binary_release_safe_output.expected  library-0.13.0.zig  library.zig  test_debug.zig  test_release_safe.zig
e2e/workspace/configure-target/: BUILD.bazel  defs.bzl  main.zig  read_elf_arch.zig  read_pe32_arch.zig
e2e/workspace/configure-threaded/: BUILD.bazel  binary.zig  defs.bzl  library-0.13.0.zig  library.zig  test_multi.zig  test_single.zig
e2e/workspace/configure-version/: BUILD.bazel  test-0.11.0-dev.3886+0c1bfe271.zig  test-0.11.0.zig  test-0.12.0.zig  test-0.12.1.zig  test-0.13.0.zig  test-0.14.0.zig  test-0.14.1.zig  test-0.15.1.zig  test-0.15.2.zig  zig_version_0.11.0-dev.3886+0c1bfe271.expected
e2e/workspace/data-dependencies/: BUILD.bazel  direct-data.zig  direct-module-data.zig  direct-package-data.zig  direct-package.zig  indirect-module-data.zig  indirect-module.zig  indirect-package-data.zig  indirect-package.zig  package-data.zig
e2e/workspace/deprecated-zig-package/: BUILD.bazel  main.zig  package.zig
e2e/workspace/embed-file/: BUILD.bazel  main.zig  package.zig  test-with-module.zig  test-with-package.zig
e2e/workspace/env-attr/: BUILD.bazel  main.zig  output.expected
e2e/workspace/import-name-attr/: BUILD.bazel  data.zig  main.zig
e2e/workspace/linker-script/: BUILD.bazel  bin.zig  custom.ld  lib.zig  test.zig
e2e/workspace/linkopts-attr/: BUILD.bazel  main.zig
e2e/workspace/location-expansion/: BUILD.bazel  main.c  main.zig
e2e/workspace/multiple-sources-and-packages-test/: BUILD.bazel  main.zig
e2e/workspace/multiple-sources-binary/: BUILD.bazel  io.zig  main.zig
e2e/workspace/root-module-from-single-dependency/: BUILD.bazel  main.zig
e2e/workspace/runfiles-library/: BUILD.bazel  direct-data.zig  main.zig  output.expected
e2e/workspace/simple-binary/: BUILD.bazel  main.zig
e2e/workspace/simple-cmake-library/: BUILD.bazel  main.zig
e2e/workspace/simple-library/: BUILD.bazel  main.zig
e2e/workspace/simple-shared-library/: BUILD.bazel
e2e/workspace/simple-test/: BUILD.bazel  failing-test.zig  main.zig  succeeding-test.zig
e2e/workspace/test-runner-attr/: BUILD.bazel  succeeding-test.zig  test-runner-that-fails-all-tests.zig
e2e/workspace/toolchain-glibc-example/: BUILD.bazel  MODULE.bazel  main.zig  zero.c  zero.h
e2e/workspace/toolchain-glibc-version/: BUILD.bazel  README.md  main-2.25-glibc-version.expected  main.zig
e2e/workspace/transitive-zig-modules-binary/: BUILD.bazel
e2e/workspace/transitive-zig-packages-binary/: BUILD.bazel  main.zig
e2e/workspace/zig-docs/: BUILD.bazel  guide.md  hello_world.zig  main.zig
e2e/workspace/zig-header/: BUILD.bazel  main.c
e2e/workspace/zig-module-binary/: BUILD.bazel  main.zig
e2e/workspace/zig-package-binary/: BUILD.bazel
util/: BUILD.bazel  update_filegroups.py  update_zig_versions.py
zig/: BUILD.bazel  defs.bzl  extensions.bzl  repositories.bzl  toolchain.bzl
zig/config/: BUILD.bazel
zig/config/mode/: BUILD.bazel
zig/config/threaded/: BUILD.bazel
zig/lib/: BUILD.bazel
zig/private/: BUILD.bazel  cc_helper.bzl  cc_linkopts.bzl  filetypes.bzl  platforms.bzl  resolved_target_toolchain.bzl  resolved_toolchain.bzl  settings.bzl  toolchains_repo.bzl  versions.bzl  versions.bzl.tpl  versions.json  zig_binary.bzl  zig_c_library.bzl  zig_c_module.bzl  zig_configure.bzl  zig_library.bzl  zig_module.bzl  zig_package.bzl  zig_runfiles.bzl  zig_shared_library.bzl  zig_static_library.bzl  zig_target_toolchain.bzl  zig_test.bzl  zig_toolchain.bzl  zig_toolchain_header.bzl
zig/private/bzlmod/: BUILD.bazel  cc_common_link.bzl  zig.bzl
zig/private/common/: BUILD.bazel  bazel_builtin.bzl  bazel_builtin.zig.tpl  cdeps.bzl  csrcs.bzl  data.bzl  escape_label.bzl  filetypes.bzl  linkdeps.bzl  linker_script.bzl  location_expansion.bzl  semver.bzl  translate_c.bzl  zig_build.bzl  zig_cache.bzl  zig_docs.bzl  zig_lib_dir.bzl  zig_target_triple.bzl
zig/private/providers/: BUILD.bazel  zig_module_info.bzl  zig_package_info.bzl  zig_settings_info.bzl  zig_target_info.bzl  zig_toolchain_info.bzl
zig/private/repo/: BUILD.bazel  toolchains_repo.bzl  zig_repository.bzl
zig/runfiles/: BUILD.bazel  guide.md  runfiles.zig
zig/runfiles/src/: Directory.zig  Manifest.zig  RPath.zig  RepoMapping.zig  Runfiles.zig  discovery.zig
zig/settings/: BUILD.bazel
zig/tests/: BUILD.bazel  bzlmod_zig_test.bzl  cache_test.bzl  config_test.bzl  emit_attr_test.bzl  linkmode_test.bzl  mode_test.bzl  module_info_test.bzl  package_info_test.bzl  rules_test.bzl  semver_test.bzl  target_platform_test.bzl  target_triple_test.bzl  threaded_test.bzl  toolchain_header_test.bzl  use_cc_common_link_test.bzl  util.bzl  versions_test.bzl  zigopt_test.bzl
zig/tests/c-sources-binary/: BUILD.bazel  main.zig  symbol_a.c  symbol_b.c
zig/tests/compiler_runtime/: BUILD.bazel  main.zig
zig/tests/emit-attr/: BUILD.bazel  library.zig  test.zig
zig/tests/import-name-module/: BUILD.bazel  main.zig
zig/tests/integration_tests/: .bazelrc.meta.tpl  BUILD.bazel  integration_testing.zig  integration_tests_runner.zig  minimal_tests_runner.zig  mirrors_tests_runner.zig  zig_version_test.zig.tpl  (+1 more)
(+161 files in other folders)
