load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

exports_files(
    ["WORKSPACE"],
    visibility = ["//util:__pkg__"],
)

bzl_library(
    name = "internal_deps",
    srcs = ["internal_deps.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

# Execute `bazel run //util:update_filegroups` to update this target.
filegroup(
    name = "all_files",
    srcs = [
        ":BUILD.bazel",
        ":MODULE.bazel",
        ":WORKSPACE",
        ":WORKSPACE.bzlmod",
        ":internal_deps.bzl",
        "//zig:all_files",
    ],
    visibility = ["//visibility:public"],
)
