exports_files(
    ["WORKSPACE"],
    visibility = ["//util:__pkg__"],
)

filegroup(
    name = "bazelrc",
    srcs = [
        ".bazelrc.common",
        ".bazelrc.flags",
        ".bazelrc.remote",
    ] + glob(
        [
            # buildifier: disable=constant-glob
            ".bazelrc.ic.user",
        ],
        allow_empty = True,
    ),
    visibility = ["//zig/tests/integration_tests:__pkg__"],
)

# Execute `bazel run //util:update_filegroups` to update this target.
filegroup(
    name = "all_files",
    srcs = [
        ":BUILD.bazel",
        ":MODULE.bazel",
        ":WORKSPACE",
        "//zig:all_files",
    ],
    visibility = ["//visibility:public"],
)
