exports_files(
    ["WORKSPACE"],
    visibility = ["//util:__pkg__"],
)

exports_files(
    [".bazelversion"],
    # Note, do not depend on this outside of rules_zig.
    # It is only exported for write_source_files in e2e/workspace/BUILD.
    visibility = ["//visibility:public"],
)

filegroup(
    name = "bazelrc",
    srcs = [
        ".bazelrc.common",
        ".bazelrc.flags",
        ".bazelrc.remote",
    ] + glob(
        [
            # buildifier: disable=constant-glob
            ".bazelrc.ic.user",
        ],
        allow_empty = True,
    ),
    visibility = ["//zig/tests/integration_tests:__pkg__"],
)

# Execute `bazel run //util:update_filegroups` to update this target.
filegroup(
    name = "all_files",
    srcs = [
        ":BUILD.bazel",
        ":MODULE.bazel",
        ":WORKSPACE",
        "//zig:all_files",
    ],
    visibility = ["//visibility:public"],
)
