load("@bazel_gazelle//:def.bzl", "gazelle", "gazelle_binary")
load("@buildifier_prebuilt//:rules.bzl", "buildifier", "buildifier_test")
load("@rules_multirun//:defs.bzl", "multirun")

buildifier(
    name = "buildifier.fix",
    diff_command = "diff",
    exclude_patterns = ["./.git/*"],
    lint_mode = "fix",
    mode = "fix",
)

buildifier_test(
    name = "buildifier.check",
    diff_command = "diff",
    exclude_patterns = ["./.git/*"],
    lint_mode = "warn",
    mode = "diff",
    no_sandbox = True,
    workspace = "//:WORKSPACE",
)

multirun(
    name = "update",
    commands = [
        ":gazelle",
        ":update_filegroups",
        "//docs:update-alias",
        "@rules_bazel_integration_test//tools:update_deleted_packages",
        ":buildifier.fix",
    ],
)

gazelle_binary(
    name = "gazelle_bin",
    languages = ["@bazel_skylib_gazelle_plugin//bzl"],
)

gazelle(
    name = "gazelle",
    gazelle = "gazelle_bin",
)

py_binary(
    name = "update_filegroups",
    srcs = ["update_filegroups.py"],
    args = [
        "--buildozer",
        "$(rootpath @buildifier_prebuilt//:buildifier)",
    ],
    data = ["@buildifier_prebuilt//:buildifier"],
    deps = ["@rules_python//python/runfiles"],
)
