load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("//zig/private:resolved_toolchain.bzl", "resolved_toolchain")

# For stardoc to reference the files
exports_files([
    "defs.bzl",
    "toolchain.bzl",
])

# This is the Zig compiler toolchain type. Zig rule authors should use this
# target in the `toolchains` parameter in order to access the appropriate Zig
# compiler for the current execution platform. Note, the target platform is
# handled separately via //zig/target:toolchain_type.
toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

resolved_toolchain(
    name = "resolved_toolchain",
    # Marked manual so that `bazel test //...` passes
    # even if no toolchain is registered.
    tags = ["manual"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "repositories",
    srcs = ["repositories.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//zig/private:toolchains_repo",
        "//zig/private:versions",
        "@bazel_tools//tools/build_defs/repo:http.bzl",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//zig/private:zig_binary",
        "//zig/private:zig_configure",
        "//zig/private:zig_library",
        "//zig/private:zig_package",
        "//zig/private:zig_test",
    ],
)

bzl_library(
    name = "toolchain",
    srcs = ["toolchain.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "//zig/private:zig_target_toolchain",
        "//zig/private:zig_toolchain",
    ],
)

# Execute `bazel run //util:update_filegroups` to update this target.
filegroup(
    name = "all_files",
    srcs = [
        ":BUILD.bazel",
        ":defs.bzl",
        ":repositories.bzl",
        ":toolchain.bzl",
        "//zig/config:all_files",
        "//zig/private:all_files",
        "//zig/settings:all_files",
        "//zig/target:all_files",
    ],
    visibility = ["//:__pkg__"],
)
