bazel_dep(name = "rules_zig", version = "0.0.0", dev_dependency = True)
bazel_dep(name = "aspect_bazel_lib", version = "2.9.4", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.7.1", dev_dependency = True)
bazel_dep(name = "platforms", version = "0.0.10", dev_dependency = True)
bazel_dep(name = "rules_cc", version = "0.0.13", dev_dependency = True)

local_path_override(
    module_name = "rules_zig",
    path = "../..",
)

zig = use_extension(
    "@rules_zig//zig:extensions.bzl",
    "zig",
    dev_dependency = True,
)
zig.toolchain(zig_version = "0.13.0")
zig.toolchain(zig_version = "0.12.1")
zig.toolchain(zig_version = "0.12.0")
zig.toolchain(zig_version = "0.11.0")
use_repo(zig, "zig_toolchains")

bazel_dep(name = "toolchains_buildbuddy", dev_dependency = True)
archive_override(
    module_name = "toolchains_buildbuddy",
    integrity = "sha256-HupO9xeeYDAybxZiXmUFk6W5bAlNnM3c2e8cwkutEpc=",
    strip_prefix = "buildbuddy-toolchain-eb143d1cf81dcc3ddbf0be5b9950cf8c14aa2de9",
    urls = "https://github.com/buildbuddy-io/buildbuddy-toolchain/archive/eb143d1cf81dcc3ddbf0be5b9950cf8c14aa2de9.tar.gz",
)

buildbuddy = use_extension(
    "@toolchains_buildbuddy//:extensions.bzl",
    "buildbuddy",
    dev_dependency = True,
)
use_repo(buildbuddy, "buildbuddy_toolchain")

bazel_dep(name = "runfiles_library_dependency", dev_dependency = True)
local_path_override(
    module_name = "runfiles_library_dependency",
    path = "runfiles-library/dependency",
)

local_path_override(
    module_name = "runfiles_library_transitive_dependency",
    path = "runfiles-library/dependency/transitive-dependency",
)
