bazel_dep(name = "rules_zig", version = "0.6.1", dev_dependency = True)
bazel_dep(name = "aspect_bazel_lib", version = "2.21.2", dev_dependency = True)
bazel_dep(name = "bazel_features", version = "1.38.0", dev_dependency = True)
bazel_dep(name = "bazel_skylib", version = "1.8.2", dev_dependency = True)
bazel_dep(name = "platforms", version = "1.0.0", dev_dependency = True)
bazel_dep(name = "rules_cc", version = "0.2.14", dev_dependency = True)

local_path_override(
    module_name = "rules_zig",
    path = "../..",
)

zig = use_extension(
    "@rules_zig//zig:extensions.bzl",
    "zig",
    dev_dependency = True,
)
zig.toolchain(zig_version = "0.15.1")
zig.toolchain(zig_version = "0.14.1")
use_repo(zig, "zig_toolchains")

bazel_dep(name = "toolchains_buildbuddy", dev_dependency = True)
archive_override(
    module_name = "toolchains_buildbuddy",
    integrity = "sha256-UA+poYaWFbPxgtoA2re4mX89c3/8yYchpKwr4pvvGOw=",
    strip_prefix = "buildbuddy-toolchain-ffd296b7a9821174cdb2188d1373fd262cacb09d",
    urls = ["https://github.com/buildbuddy-io/buildbuddy-toolchain/archive/ffd296b7a9821174cdb2188d1373fd262cacb09d.tar.gz"],
)

buildbuddy = use_extension(
    "@toolchains_buildbuddy//:extensions.bzl",
    "buildbuddy",
    dev_dependency = True,
)
use_repo(buildbuddy, "buildbuddy_toolchain")

bazel_dep(name = "runfiles_library_dependency", dev_dependency = True)
local_path_override(
    module_name = "runfiles_library_dependency",
    path = "runfiles-library/dependency",
)

local_path_override(
    module_name = "runfiles_library_transitive_dependency",
    path = "runfiles-library/dependency/transitive-dependency",
)
