load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "zig_binary",
    srcs = ["zig_binary.bzl"],
    visibility = ["//zig:__subpackages__"],
    deps = [
        "//zig/private/common:filetypes",
        "//zig/private/common:zig_cache",
        "//zig/private/providers:zig_package_info",
    ],
)

bzl_library(
    name = "zig_package",
    srcs = ["zig_package.bzl"],
    visibility = ["//zig:__subpackages__"],
    deps = [
        "//zig/private/common:filetypes",
        "//zig/private/providers:zig_package_info",
    ],
)

bzl_library(
    name = "zig_library",
    srcs = ["zig_library.bzl"],
    visibility = ["//zig:__subpackages__"],
    deps = [
        "//zig/private/common:filetypes",
        "//zig/private/common:zig_cache",
        "//zig/private/providers:zig_package_info",
    ],
)

bzl_library(
    name = "zig_test",
    srcs = ["zig_test.bzl"],
    visibility = ["//zig:__subpackages__"],
    deps = [
        "//zig/private/common:filetypes",
        "//zig/private/common:zig_cache",
        "//zig/private/providers:zig_package_info",
    ],
)

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//zig:__subpackages__"],
)

bzl_library(
    name = "resolved_toolchain",
    srcs = ["resolved_toolchain.bzl"],
    visibility = ["//zig:__subpackages__"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//zig:__subpackages__"],
)

# Run `scripts/all_files.py` to update this target.
filegroup(
    name = "all_files",
    srcs = [
        ":BUILD.bazel",
        ":resolved_toolchain.bzl",
        ":toolchains_repo.bzl",
        ":versions.bzl",
        ":zig_binary.bzl",
        ":zig_library.bzl",
        ":zig_package.bzl",
        ":zig_test.bzl",
        "//zig/private/common:all_files",
        "//zig/private/providers:all_files",
    ],
    visibility = ["//zig:__pkg__"],
)
