load("@bazel_skylib//:bzl_library.bzl", "bzl_library")

bzl_library(
    name = "zig_package",
    srcs = ["zig_package.bzl"],
    visibility = ["//zig:__subpackages__"],
    deps = [
        "//zig/private/common:filetypes",
        "//zig/private/providers:zig_package_info",
    ],
)

bzl_library(
    name = "zig_test",
    # Gazelle removes the srcs attribute for some reason.
    srcs = ["zig_test.bzl"],  # keep
    visibility = ["//zig:__subpackages__"],
)

bzl_library(
    name = "settings",
    srcs = ["settings.bzl"],
    visibility = ["//zig:__subpackages__"],
    deps = ["@bazel_skylib//rules:common_settings"],
)

bzl_library(
    name = "zig_configure",
    srcs = ["zig_configure.bzl"],
    visibility = ["//zig:__subpackages__"],
    deps = [
        ":settings",
        "@bazel_skylib//lib:paths",
    ],
)

bzl_library(
    name = "zig_target_toolchain",
    srcs = ["zig_target_toolchain.bzl"],
    visibility = ["//zig:__subpackages__"],
    deps = ["//zig/private/providers:zig_target_info"],
)

bzl_library(
    name = "zig_binary",
    srcs = ["zig_binary.bzl"],
    visibility = ["//zig:__subpackages__"],
    deps = [
        "//zig/private/common:filetypes",
        "//zig/private/common:linker_script",
        "//zig/private/common:zig_cache",
        "//zig/private/providers:zig_package_info",
        "//zig/private/providers:zig_settings_info",
        "//zig/private/providers:zig_target_info",
    ],
)

bzl_library(
    name = "zig_library",
    srcs = ["zig_library.bzl"],
    visibility = ["//zig:__subpackages__"],
    deps = [
        "//zig/private/common:filetypes",
        "//zig/private/common:linker_script",
        "//zig/private/common:zig_cache",
        "//zig/private/providers:zig_package_info",
        "//zig/private/providers:zig_settings_info",
        "//zig/private/providers:zig_target_info",
    ],
)

bzl_library(
    name = "resolved_target_toolchain",
    srcs = ["resolved_target_toolchain.bzl"],
    visibility = ["//zig:__subpackages__"],
)

bzl_library(
    name = "resolved_toolchain",
    srcs = ["resolved_toolchain.bzl"],
    visibility = ["//zig:__subpackages__"],
)

bzl_library(
    name = "toolchains_repo",
    srcs = ["toolchains_repo.bzl"],
    visibility = ["//zig:__subpackages__"],
)

bzl_library(
    name = "versions",
    srcs = ["versions.bzl"],
    visibility = ["//zig:__subpackages__"],
)

# Execute `bazel run //util:update_filegroups` to update this target.
filegroup(
    name = "all_files",
    srcs = [
        ":BUILD.bazel",
        ":resolved_target_toolchain.bzl",
        ":resolved_toolchain.bzl",
        ":settings.bzl",
        ":toolchains_repo.bzl",
        ":versions.bzl",
        ":zig_binary.bzl",
        ":zig_configure.bzl",
        ":zig_library.bzl",
        ":zig_package.bzl",
        ":zig_target_toolchain.bzl",
        ":zig_test.bzl",
        "//zig/private/common:all_files",
        "//zig/private/providers:all_files",
    ],
    visibility = ["//zig:__pkg__"],
)
